fix data path